--- a/ARbook/tsconfig.json
+++ b/ARbook/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "include": [
     "./src/**/*.ts",
-    "./src/customer-api-docs/*"
+    "./src/**/*.tsx"
    ]
 }
