--- a/ARbook/android/app/src/main/AndroidManifest.xml
+++ b/ARbook/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+          android:name="com.google.mlkit.vision.DEPENDENCIES"
+          android:value="barcode" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -20,6 +23,7 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            
         </intent-filter>
       </activity>
     </application>
