--- a/ARbook/tsconfig.json
+++ b/ARbook/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "include": [
-    "./src/**/*.ts",
-    "./src/**/*.tsx"
+    "./src/**/*.ts"
    ]
 }
