--- a/ARbook/android/app/src/main/AndroidManifest.xml
+++ b/ARbook/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -13,6 +14,7 @@
       <meta-data
           android:name="com.google.mlkit.vision.DEPENDENCIES"
           android:value="barcode" />
+      <meta-data android:name="com.google.ar.core" android:value="reccomended" tools:replace="android:value" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
