--- a/ARbook/package.json
+++ b/ARbook/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-ar-viewer": "^0.1.17",
     "react-native-vector-icons": "^10.0.0",
     "react-native-vision-camera": "^3.5.1"
   },
